Implemented JWT for gRPC